Add form fields and styling

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.34.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource-variable/cormorant": "^5.0.9"
+	}
 }
