--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource-variable/cormorant": "^5.0.9",
+		"papaparse": "^5.4.1",
 		"svelecte": "^3.17.2",
 		"svelte-dnd-action": "^0.9.38"
 	}
