--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@fontsource-variable/cormorant": "^5.0.9",
 		"papaparse": "^5.4.1",
 		"svelecte": "^3.17.2",
-		"svelte-dnd-action": "^0.9.38"
+		"svelte-dnd-action": "^0.9.38",
+		"svelte-persisted-store": "^0.9.0"
 	}
 }
