--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@extractus/oembed-extractor": "^4.0.1",
 		"@fontsource-variable/cormorant": "^5.0.9",
 		"papaparse": "^5.4.1",
 		"svelecte": "^3.17.2",
