--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"prettier": "^3.0.0",
 		"prettier-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
+		"sveltekit-embed": "^0.0.12",
 		"vite": "^4.4.2",
 		"vitest": "^0.34.0"
 	},
